@@ -17,6 +17,7 @@
 \listtheorems{proposition}
 
 \chapter{プログラミング}
+\input{dragon-1}
 \input{prog-1}
 \chapter{形式級数}
 \input{stanley-1}
